[package]
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"
name = "health-check-bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
openssl = { version = "0.10.40", features = ["vendored"] }
reqwest = "0.11.11"
ruma = { version = "0.6.4", features = [
  "client-api-c",
  "client-ext-client-api",
  "client-reqwest",
  "rand",
] }
serde = { version = "1.0.138", features = ["derive"] }
serde_yaml = "0.8.24"
tokio = { version = "1.19.2", features = ["full"] }
